tests/valid/noValueTypeOf.ts
// @ts-nocheck
const x = 5;
const t = typeOf(x);
