tests/invalid/noRegex.ts
// @ts-nocheck
const pattern = /hello world/;
